; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000/extr_e1000_ethtool.c_e1000_phy_disable_receiver.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000/extr_e1000_ethtool.c_e1000_phy_disable_receiver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_adapter = type { %struct.e1000_hw }
%struct.e1000_hw = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.e1000_adapter*)* @e1000_phy_disable_receiver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @e1000_phy_disable_receiver(%struct.e1000_adapter* %0) #0 {
  %2 = alloca %struct.e1000_adapter*, align 8
  %3 = alloca %struct.e1000_hw*, align 8
  store %struct.e1000_adapter* %0, %struct.e1000_adapter** %2, align 8
  %4 = load %struct.e1000_adapter*, %struct.e1000_adapter** %2, align 8
  %5 = getelementptr inbounds %struct.e1000_adapter, %struct.e1000_adapter* %4, i32 0, i32 0
  store %struct.e1000_hw* %5, %struct.e1000_hw** %3, align 8
  %6 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %7 = call i32 @e1000_write_phy_reg(%struct.e1000_hw* %6, i32 29, i32 31)
  %8 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %9 = call i32 @e1000_write_phy_reg(%struct.e1000_hw* %8, i32 30, i32 36860)
  %10 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %11 = call i32 @e1000_write_phy_reg(%struct.e1000_hw* %10, i32 29, i32 26)
  %12 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %13 = call i32 @e1000_write_phy_reg(%struct.e1000_hw* %12, i32 30, i32 36848)
  ret void
}

declare dso_local i32 @e1000_write_phy_reg(%struct.e1000_hw*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
